@@ -48,6 +48,8 @@ documents those changes that are of interest to users and administrators.
     logging purposes if it is needed. Modified for performance purposes.
  -- Docs - update salloc/sbatch/srun man pages to mention corresponding
     environment variables for --mem/--mem-per-cpu and allowed suffixes.
+ -- Silence srun warning when overriding the job ntasks-per-node count
+    with a lower task count for the step.
 
 * Changes in Slurm 16.05.4
 ==========================
